[project]
name = "IreBot"
version = "0.7.7"
description = "Personal Twitch.tv Bot"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aluerie", email = "aluerie@gmail.com" }]
maintainers = [{ name = "Aluerie", email = "aluerie@gmail.com" }]
urls.Homepage = "https://github.com/Aluerie/IreBot"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python ",
    "Topic :: Twitch Bots",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "asyncpg>=0.31.0",
    "click>=8.3.3",
    "discord-py[speed]>=2.7.1",
    "pydantic-settings>=2.14.1",
    "steamio>=1.1.3",
    "twitchio[starlette]>=3.3.0b2031",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
]

[tool.uv.sources]
twitchio = { git = "https://github.com/PythonistaGuild/TwitchIO.git", rev = "main" }
steamio = { git = "https://github.com/Aluerie/steam.py", rev = "introduce-ext.dota2" }

[dependency-groups]
dev = [
    "asyncpg-stubs",
    "ipykernel",
    "pre-commit>=4.6.0",
    "pyright>=1.1.408",
    "pytest",
    "ruff>=0.15.11",
]

[[tool.uv.index]]
name = "umbra"
url = "https://about.abstractumbra.dev/pip/"
explicit = true

# ##############################
# SHARED PYPROJECT TOML CONFIG #
# ##############################

[tool.pyright]
exclude = [".venv", "docs", "**/__pycache__", "**/node_modules", "**/.*"]
pythonVersion = "3.12"
deprecateTypingAliases = true
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "none"
reportImportCycles = "none"
reportMissingSuperCall = "none"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnreachable = "warning"
reportUnusedCallResult = "none"

reportDuplicateImport = "none"
# reportIncompatibleMethodOverride = "none"
# reportIncompatibleVariableOverride = "none"
# reportMissingTypeStubs = "none"

[tool.ruff]
line-length = 125
target-version = "py312"
preview = false
exclude = [".venv", "docs"]
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ERA", # eradicate
    # "RUF100", # unused-noqa

    "D",
    "D417",
    "DOC",

    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment 
    "E117",   # over-indented
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes 
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC002", # multi-line-implicit-string-concatenation

    "ANN401",
    "ASYNC116",
    "ASYNC109",
    "C90",
    "CPY001",
    "F401",
    "F402",
    "F403",
    "F405",
    "FBT003",
    "FIX",
    "INP001",
    "PD011",
    "PLC0415",
    "PLR0904",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0914",
    "PLR0915",
    "PLR0917",
    "PLR6301",
    "PLR2004",
    "PYI058",
    "RUF001",
    "RUF029",
    "S101",
    "S311",
    "SIM105",
    "SLF001",
    "TD",
    "TRY003",
    "TRY301",

    "FLY002",
    "PLW2901",
    "S608",
    "TID252",

    "D100",
    "D104",
    "D105",
    "D107",
    "D401",
    "DOC201",
    "DOC402",
    "DOC501",
]
unfixable = ["E501", "ERA", "RUF100"]
flake8-annotations.allow-star-arg-any = true
flake8-quotes.inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"modules/beta.py" = ["ANN201"]
"*.ipynb" = ["I001", "ANN204", "D", "DOC", "ERA", "F404", "T20", "W391"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest]
pythonpath = ["src"]
addopts = ["-vv", "-p", "no:cacheprovider", "--disable-warnings"]
norecursedirs = ["env/*", "venv/*", ".venv/*"]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests/"]
python_files = ["test_*.py"]
